--- a/Jeopardy.csproj
+++ b/Jeopardy.csproj
@@ -9,6 +9,52 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Pics\blackBackground.jpg" />
+    <None Remove="Pics\blankJeopardy.jpg" />
+    <None Remove="Pics\blankJeopardy.png" />
+    <None Remove="Pics\jeopardyLogo.png" />
+    <None Remove="Sounds\correctAnswer.wav" />
+    <None Remove="Sounds\gameFinished.wav" />
+    <None Remove="Sounds\incorrectAnswer.wav" />
+    <None Remove="Sounds\newRound.wav" />
+    <None Remove="Sounds\OpeningSound.wav" />
+    <None Remove="Sounds\wrongAnswer.wav" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Pics\blackBackground.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Pics\blankJeopardy.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Pics\blankJeopardy.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Pics\jeopardyLogo.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Sounds\correctAnswer.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Sounds\gameFinished.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Sounds\incorrectAnswer.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Sounds\newRound.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Sounds\OpeningSound.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Sounds\wrongAnswer.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
